# wasm-toys

./: .gitignore  Cargo.toml  build.rs  reprocess_toy_files.sh  scene_exporter.py
assets/: template.html
bindings/: assets.js  common.js  gl.js  input.js  main.js  support.js  worker.js
plugin/: exporter.py
src/: arena.rs  engine.rs  exports.rs  input.rs  io.rs  lib.rs  map.rs  prelude.rs  string_arena.rs
src/graphics/: camera.rs  framebuffer.rs  mesh.rs  mod.rs  shader.rs  sprite_registry.rs  sprite_renderer.rs  texture.rs  texture_registry.rs  vertex.rs
src/imports/: gl.rs  input.rs  mod.rs  user.rs  util.rs  worker.rs
src/input/: core.rs  gesture_tracker.rs  mod.rs
src/scene/: importer.rs  mod.rs  types.rs
src/shaders/: color.glsl  tex.glsl
src/worker/: client.rs  host.rs  mod.rs
