[package]
name = "wasm-toys"
version = "0.1.0"
authors = ["Patrick Monaghan <0x5f.manpat@gmail.com>"]
edition = "2021"

[dependencies]
common = { git = "https://github.com/manpat/common-rs.git", branch = "cruft-resurrection" }
toy = { git = "https://github.com/manpat/toy-rs.git", version = "0.4" }
failure = "0.1.8"
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
lto = true
